# algae

./: .ccls  .gitignore  CMakeLists.txt  Makefile  README.md  algae.pc.in  build.sh  cmake_install.cmake  compile_commands.json  dsp.cpp  dsp.h  test.sh
design/: allpass.ipynb  allpole.ipynb  blit.ipynb  dcblocker.ipynb  lpc.ipynb  oversampling.ipynb
src/: algae.cpp  algae.h  audio_graph.h  dft.h
src/core/: audio_block.h  constants.h  control.h  dc_blocker.h  drum.h  effects.h  experimental.h  filter.h  integrator.h  linear_predictive_coding.h  math_functions.h  math_tools.h  oscillator.h  oversampling.h  simd.h  spacialization.h  units.h
src/shell/: control.h  dsp_graph.h  filter.h  math_functions.h  oscillator.h
test/: ad_envelope_test.cpp  adsr_envelope_test.cpp  allpass_test.cpp  allpole_test.cpp  asr_envelope_test.cpp  audio_block_test.cpp  beats_to_samples_test.cpp  biquad_test.cpp  blit_saw_test.cpp  blit_square_test.cpp  blit_square_test.h  block_test.cpp  control_test.cpp  cosine_table_lookup_test.cpp  db_to_power_test.cpp  db_to_rms_test.cpp  dc_blocker_test.cpp  distorted_bandpass_test.cpp  experimental.cpp  factorial_test.cpp  filter_test.cpp  frequency_test_utilities.h  integrator_test.cpp  lcg_noise_test.cpp  math_functions_test.cpp  ms_to_samples_test.cpp  mtof_test.cpp  noise_test.cpp  onepole_test.cpp  oscillator_test.cpp  perc_test.cpp  phasor_test.cpp  poly_blep_test.cpp  ramp_test.cpp  resonant_bandpass_test.cpp  sine_table_lookup_test.cpp  sine_table_lookup_test.h  units_test.cpp  window_test.cpp
test/analysis/: linear_predictive_coding_test.cpp
test/audio_block/: audio_block_test.cpp
test/control/: ad_envelope_test.cpp  adsr_envelope_test.cpp  ramp_test.cpp  window_test.cpp
test/filter/: allpole_test.cpp  biquad_test.cpp  dc_blocker_test.cpp  distorted_bandpass_test.cpp  distorted_bandpass_test.h  onepole_test.cpp  resonant_bandpass_test.cpp
test/math/: math_functions_test.cpp  (+1 more)
(+65 files in other folders)
